[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-cli"
version = "1.0.0"
description = "CLaude AnyWhere - Remote control for Claude Code from your phone"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "raullenchai" }
]
keywords = ["claude", "cli", "remote", "tmux", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/raullenchai/claw"
Repository = "https://github.com/raullenchai/claw"
Issues = "https://github.com/raullenchai/claw/issues"

[project.scripts]
claw = "claw:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["claw.py", "README.md", "LICENSE"]
